--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>akjsfkldjakljfkl;aj</p>
+    <p>ini adalah perubahan dari yang kemarin</p>
 </body>
 </html>
