--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>ini adalah perubahan dari yang kemarin</p>
+    <h1>hai nama saya adalah wahyu fachri </h1>
+    <p>perkenalkan nama saya wahyu fachri ini adalah pertama kali saya menggunakan git </p>
+    <p>dan ini adalah perubahan kedua</p>
 </body>
 </html>
