--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>hai nama saya adalah wahyu fachri </h1>
     <p>perkenalkan nama saya wahyu fachri ini adalah pertama kali saya menggunakan git </p>
     <p>dan ini adalah perubahan kedua</p>
+    <button><a href="masuk.html">masuk</a></button>
 </body>
 </html>
