--- a/masuk.html
+++ b/masuk.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>ini merupakan halaman masuk pertama</h1>
+
+    <p>ini adalah merupakan projek selanjutnya</p>
 </body>
 </html>
